...
        android:layout_width="218dp"
        android:layout_height="49dp"
        android:layout_marginTop="294dp"
        android:layout_marginBottom="40dp"
        android:text="Please Enter Your Name"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/username_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:layout_marginBottom="172dp"
        android:text="@string/next"
        android:onClick="onNextButtonClicked"
...
