<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">

    <TextView
        android:id="@+id/class_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16sp"
        android:height="48sp"
        android:lineHeight="32sp"
        android:textSize="12sp"
        android:textStyle="bold"
        android:text="test123" />
</FrameLayout>